Create super simple UI. Load .env file for google keys.

--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -1,2 +1,3 @@
-<div>{{1+1}}=2</div>
-<div>{{placeholder}}</div>
+<input ng-model="email"/><button type="button" ng-click="getImage()">Get Image</button>
+<br />
+<img ng-src="{{emailImage}}" height="250" width="250"/>
