--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -1,3 +1,6 @@
-<input ng-model="email"/><button type="button" ng-click="getImage()">Get Image</button>
-<br />
-<img ng-src="{{emailImage}}" height="250" width="250"/>
+<div class="form-group">
+  <label for="emailSearch">Email address</label>
+  <input type="email" class="form-control" id="emailSearch" placeholder="Email" ng-model="email"/><button class="btn btn-default" type="button" ng-click="getImage()">Get Image</button>
+  <br />
+  <img ng-src="{{emailImage}}" height="250" width="250"/>
+</div>
