--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -1,3 +1,4 @@
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+@import 'avenir-fonts';
+@import 'variables';
 @import 'bootstrap-sass/assets/stylesheets/_bootstrap';
 @import 'app';
