--- a/public/templates/email-image.html
+++ b/public/templates/email-image.html
@@ -1,14 +1,27 @@
-<div class="row">
-  <div class="col-xs-12 col-md-12">
-    <form class="form-inline" ng-submit="getImage()">
-      <input type="email" class="form-control" placeholder="Email address" ng-model="email"/>
-      <button class="btn btn-primary" type="button" ng-click="getImage()">Get Image</button>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+      <form name="form" novalidate class="form-inline" ng-submit="getImage()">
+        <div class="form-group">
+          <input type="email" name="email" class="form-control" placeholder="Email address" required ng-model="email"/>
+        </div>
+        <input class="btn btn-primary" type="submit" ng-click="getImage()" value="Get Image" />
+      </form>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12 col-md-12 searched-image-container">
-    <img ng-show="!!emailImage" ng-src="{{emailImage}}" width="275"/>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-12 errors-container" ng-show="(form.$submitted || form.email.$touched) && !form.$valid">
+      <span class="text-warning" ng-show="form.email.$error.required">Email must be filled out to search.</span>
+      <span class="text-warning" ng-show="form.email.$error.email">This is not a valid email.</span>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-12 searched-image-container">
+      <img class="img-thumbnail" ng-show="!!emailImage" ng-src="{{emailImage}}" width="275"/>
+      <span class="text-info" ng-show="emailImage === null && form.$valid">No image found. Try a different email.</span>
+    </div>
   </div>
 </div>
 
