Change colors; fix font.

--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -1,9 +1,11 @@
 // Bootstrap overrides
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 $text-color: #637370;
+$state-info-text: #47bcf3;
+$state-warning-text: #ff7c8a;
 $btn-primary-bg: #708a86;
 $font-family-sans-serif: 'Avenir LT Std 65 Medium', sans-serif;
-$headings-font-family: 'Avenir LT Std 65 Book', sans-serif;
+$headings-font-family: 'Avenir LT Std 45 Book', sans-serif;
 
 // App-specific vars
 $header-color: #30dbbd;
