--- a/public/templates/email-image.html
+++ b/public/templates/email-image.html
@@ -5,7 +5,9 @@
         <div class="form-group">
           <input type="email" name="email" class="form-control" placeholder="Email address" required ng-model="email"/>
         </div>
-        <input class="btn btn-primary" type="submit" ng-click="getImage()" value="Get Image" />
+        <div class="form-group">
+          <input class="btn btn-primary" type="submit" ng-click="getImage()" value="Get Image" />
+        </div>
       </form>
     </div>
   </div>
