--- a/public/templates/email-image.html
+++ b/public/templates/email-image.html
@@ -6,24 +6,37 @@
           <input type="email" name="email" class="form-control" placeholder="Email address" required ng-model="email"/>
         </div>
         <div class="form-group">
-          <input class="btn btn-primary" type="submit" ng-click="getImage()" value="Get Image" />
+          <input class="btn btn-primary" type="submit" value="Get Image" />
         </div>
       </form>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-xs-12 col-md-12 errors-container" ng-show="(form.$submitted || form.email.$touched) && !form.$valid">
+    <div class="col-xs-12 col-md-12 top-buffer" ng-show="(form.$submitted || form.email.$touched) && !form.$valid">
       <span class="text-warning" ng-show="form.email.$error.required">Email must be filled out to search.</span>
       <span class="text-warning" ng-show="form.email.$error.email">This is not a valid email.</span>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-xs-12 col-md-12 searched-image-container">
+    <div class="col-xs-12 col-md-12 top-buffer">
       <img class="img-thumbnail" ng-show="!!emailImage" ng-src="{{emailImage}}" width="275"/>
       <span class="text-info" ng-show="emailImage === null && form.$valid">No image found. Try a different email.</span>
     </div>
   </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-4 top-buffer search-results" ng-show="imageResults.length">
+      <h4>Search History</h4>
+      <div class="list-group">
+        <a class="list-group-item clearfix" ng-repeat="imageData in imageResults">
+          <div class="image-container" ng-style="{'background-image':'url({{imageData.image}})'}"></div>
+          <div class="image-name">{{imageData.searchStr}}</div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
