--- a/public/templates/email-image.html
+++ b/public/templates/email-image.html
@@ -1,6 +1,7 @@
 <div class="container">
+
   <div class="row">
-    <div class="col-xs-12 col-md-12">
+    <div class="col-xs-12 col-md-4">
       <form name="form" novalidate class="form-inline" ng-submit="getImage()">
         <div class="form-group">
           <input type="email" name="email" class="form-control" placeholder="Email address" required ng-model="email"/>
@@ -9,6 +10,20 @@
           <input class="btn btn-primary" type="submit" value="Get Image" />
         </div>
       </form>
+      <div class="top-buffer">
+        <img class="img-thumbnail" ng-show="!!emailImage" ng-src="{{emailImage}}" width="275"/>
+        <span class="text-info" ng-show="emailImage === null && form.$valid">No image found. Try a different email.</span>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-6 search-history" ng-show="imageResults.length">
+      <h4>Search History</h4>
+      <div class="list-group">
+        <a href="" class="list-group-item clearfix" ng-repeat="imageData in imageResults" ng-click="setImage(imageData.searchStr, imageData.image)">
+          <div class="image-container" ng-style="{'background-image':'url({{imageData.image}})'}"></div>
+          <div class="image-name">{{imageData.searchStr}}</div>
+        </a>
+      </div>
     </div>
   </div>
 
@@ -19,24 +34,4 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-xs-12 col-md-12 top-buffer">
-      <img class="img-thumbnail" ng-show="!!emailImage" ng-src="{{emailImage}}" width="275"/>
-      <span class="text-info" ng-show="emailImage === null && form.$valid">No image found. Try a different email.</span>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-md-4 top-buffer search-results" ng-show="imageResults.length">
-      <h4>Search History</h4>
-      <div class="list-group">
-        <a class="list-group-item clearfix" ng-repeat="imageData in imageResults">
-          <div class="image-container" ng-style="{'background-image':'url({{imageData.image}})'}"></div>
-          <div class="image-name">{{imageData.searchStr}}</div>
-        </a>
-      </div>
-    </div>
-  </div>
 </div>
