--- a/public/templates/email-image.html
+++ b/public/templates/email-image.html
@@ -4,15 +4,22 @@
     <div class="col-xs-12 col-md-4">
       <form name="form" novalidate class="form-inline" ng-submit="getImage()">
         <div class="form-group">
-          <input type="email" name="email" class="form-control" placeholder="Email address" required ng-model="email"/>
+          <input type="email" name="email" class="form-control" placeholder="Email address" required ng-model="email" ng-change="imageRequestError = null; emailImage = undefined"/>
         </div>
         <div class="form-group">
           <input class="btn btn-primary" type="submit" value="Get Image" />
         </div>
       </form>
+      <div class="top-buffer" ng-show="(form.$submitted || form.email.$touched) && !form.$valid">
+        <span class="text-warning" ng-show="form.email.$error.required">Email must be filled out to search.</span>
+        <span class="text-warning" ng-show="form.email.$error.email">This is not a valid email.</span>
+      </div>
+      <div class="top-buffer" ng-show="imageRequestError">
+        <span class="text-warning">{{imageRequestError}}</span>
+      </div>
       <div class="top-buffer">
         <img class="img-thumbnail" ng-show="!!emailImage" ng-src="{{emailImage}}" width="275"/>
-        <span class="text-info" ng-show="emailImage === null && form.$valid">No image found. Try a different email.</span>
+        <span class="text-info" ng-show="emailImage === null">No image found. Try a different email.</span>
       </div>
     </div>
 
@@ -24,13 +31,6 @@
           <div class="image-name">{{imageData.searchStr}}</div>
         </a>
       </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12 col-md-12 top-buffer" ng-show="(form.$submitted || form.email.$touched) && !form.$valid">
-      <span class="text-warning" ng-show="form.email.$error.required">Email must be filled out to search.</span>
-      <span class="text-warning" ng-show="form.email.$error.email">This is not a valid email.</span>
     </div>
   </div>
 
